// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`okta-verify-poll-enrollment should render poll form 1`] = `
<div>
  <span>
    <main
      class="ods-4o5zYQ ods-76eppy ods-66Tc65 ods-6lar65 ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs auth-container main-container mainViewContainer"
    >
      <div
        class="ods-4o5zYQ ods-2Se4oq ods-2VFzyK ods-1qUaxm ods-1oujX1 ods-78Q1Pv ods-3x5mmc ods-7mcS6o ods-7lpPkQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs siwContainer"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-0"
          />
          <div
            class="ods-4o5zYQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs iconContainer authCoinOverlay"
          >
            <mocksvgicon />
          </div>
        </div>
        <div
          class="MuiBox-root emotion-1"
        >
          <div
            class="identifier-container MuiBox-root emotion-2"
          >
            <div
              class="identifierContainer MuiBox-root emotion-3"
            >
              <span
                class="userIconContainer MuiBox-root emotion-4"
              >
                <svg
                  class="ods-2icygl"
                  fill="none"
                  role="presentation"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="identifier identifierSpan MuiBox-root emotion-4"
                data-se="identifier"
              >
                tester2@test.com
              </span>
            </div>
          </div>
          <form
            class="o-form"
            data-se="form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-6"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-10"
                    >
                      Set up Okta Verify
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="ods-4o5zYQ ods-76eppy ods-2famef ods-1OsrNt ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs"
                  >
                    <ol
                      class="ods-4o5zYQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs ods-5GAsrW ods-1goWbr"
                    >
                      <li
                        class="ods-5vIIsH"
                      >
                        On your mobile device, download the Okta Verify app from the App Store (iPhone and iPad) or Google Play (Android devices).
                      </li>
                      <li
                        class="ods-5vIIsH"
                      >
                        Open the app and follow the instructions to add your account
                      </li>
                      <li
                        class="ods-5vIIsH"
                      >
                        When prompted, tap Scan a QR code, then scan the QR code below:
                      </li>
                    </ol>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="qrContainer MuiBox-root emotion-4"
                  >
                    <img
                      alt="Okta Verify"
                      class="qrImg"
                      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAFq0lEQVR42u3dy07kQAwF0P7/n4YFayRCfG1Xcq40G4S6SVJnFNfz8yUiv+bjFogAIgKICCAigIgAIgKICCAigIgAIiKAiAAiAogIICKAiAAiAogIICKAiAAiIoCIACICiAggIoCIAPLzRZ9P+b/fPv/O33PnMxOfX3Vdf/l77vwNf7nGxHMHBBBAAAEEEEBKLrDzQSQacOc92dCAO68REEAAAQQQQAC59IASDzr9mel6If1+fhVd4t4CAggggAACCCCrgNz5/KpGeEoXceKeAwIIIIAAAgggjwEy9eC2dUdX1SwbuuUBAQQQQAABBJDoO/mdG76hWzINrbNG66zFAAEEEEAAAQSQf3ddpifF+fmen1sPAoifAwKInwPyyCTeh9Pv5OnJkFVdwVMNGBBAAAEEEEBeDqTq5ieWuHa+G2/7rsTfmb7/gAACCCCAAALIJSAbaoR0V/bV6003wsTv3OkWVoMAAggggAACyHhXbdWkwalu2/R+wp31y1O7jgEBBBBAAAHkAUA6d9Wo6t5MdGneuZbOhr1hEikggAACCCCAvBxI57v3VJdpYoQ6/R/F5hHzV9UggAACCCCAANJTX0zVMunR/M21TGIv39PXlQACCCCAAALIQd28p4/wdv6H0Dl6nr5vJy7RBQQQQAABBJCDgFR1UVY90M4jCRI7jUxN2kz8vsmKgAACCCCAAFJed0wdCtl5tMGG89y3jZ5vrlkAAQQQQAAB5AE1SOf6iDtdsp27eaQPD03cz0R3sSIdEEAAAQQQQEoaTHokOv1Qpkb2N+xj3AkWEEAAAQQQQAAZWXORfm9PXHti8mT62tP33DgIIIAAAggggJR3e06NjKe7ptObs21owIkjIQABBBBAAAEEkLb35/RI8YbN7tLfu2F/YAumAAEEEEAAASTandi5fLVzYuGGE6+2LUPeHEAAAQQQQAA5CEi6YUx1mSZG5Kf2Ct62sd5rp5oAAggggAACSK4GSTfCdN2RxtW5cdxTD+sEBBBAAAEEkIcBmfr9zsZ8ynEPU7u1WHILCCCAAAIIICNAOt+f0yO/G/bIraoT0zUOIIAAAggggABS8s6Z6CLuxNLZwBJd3527uBhJBwQQQAABBJCvTYjSI86dNUW6juicJJk+DBQQQAABBBBAACmpKRI3p3PtQ7pbu6rW6PxPxsZxgAACCCCAADJSayQa8NQ7ebr+2nwyV+ekR0AAAQQQQAB5OZCp/WA3v+dX3cOq+5+YqLnhvgECCCCAAALIyzeOSzSS9J69pxymmT6GoHMDQEAAAQQQQAABJPqOvWEJauc7/9SpVYnr6jwLHhBAAAEEEEBeUoNUvRunuwq31SNVtV4a+ClduIAAAggggADysBpk2yGPGybgTTWezpH0RLc2IIAAAggggLwcyLZ1HOkz1jd8V1U37NQ6lA11CiCAAAIIIIAcVINs6/69873p76qqIxJ1wdSERkAAAQQQQAAB5N+Np6ohpU8+6pxgWQVnc/esbX8AAQQQQAABpPzBTa0H2bwZWueIdqL+OvHgTkAAAQQQQAA5CEjnyHgaQqKeOn0Dt221HiCAAAIIIIC8BMgUwMT79obDNNOHnKbrLOtBAAEEEEAAAaStBpk6Z3zD4Z4bToZKfP7Uga2AAAIIIIAA8kIgic9Jb78/taV/Z5dvYsmtGgQQQAABBBBARoBsWC6aaEib668NZ9MbSQcEEEAAAQSQI4BcfY9Nv2+n65SpYwg2zzoABBBAAAEEEEDagFR1gXY+0EQX6LZZCqdgAQQQQAABBJBDgXRCmxoBT9c+m89kT4MFBBBAAAEEEEDaTjhKdzlOTeTbUE9tG3kHBBBAAAEEkJcDETkxgIgAIgKICCAigIgAIgKICCAigIgAIiKAiAAiAogIICKAiAAiAogIICKAiAAiIoCIACICiAggIoCIACJybr4BVbQ91L3A8YAAAAAASUVORK5CYII="
                    />
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <button
                    class="MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-15"
                    tabindex="0"
                    type="button"
                  >
                    Can't scan?
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-17"
                  data-se="switchAuthenticator"
                  tabindex="0"
                  type="button"
                >
                  Return to authenticator list
                </button>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-17"
                  data-se="cancel"
                  tabindex="0"
                  type="button"
                >
                  Back to sign in
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </span>
</div>
`;

exports[`okta-verify-poll-enrollment should send correct payload 1`] = `
<div>
  <span>
    <main
      class="ods-4o5zYQ ods-76eppy ods-66Tc65 ods-6lar65 ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs auth-container main-container mainViewContainer"
    >
      <div
        class="ods-4o5zYQ ods-2Se4oq ods-2VFzyK ods-1qUaxm ods-1oujX1 ods-78Q1Pv ods-3x5mmc ods-7mcS6o ods-7lpPkQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs siwContainer"
      >
        <div
          class="okta-sign-in-header auth-header siwHeader authCoinSpacing"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 emotion-0"
          />
          <div
            class="ods-4o5zYQ ods-2oc5SK ods-4XAbls ods-2NLKpK ods-1ll9ky ods-4IdjLs iconContainer authCoinOverlay"
          >
            <mocksvgicon />
          </div>
        </div>
        <div
          class="MuiBox-root emotion-1"
        >
          <div
            class="identifier-container MuiBox-root emotion-2"
          >
            <div
              class="identifierContainer MuiBox-root emotion-3"
            >
              <span
                class="userIconContainer MuiBox-root emotion-4"
              >
                <svg
                  class="ods-2icygl"
                  fill="none"
                  role="presentation"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3V5C10 6.10457 9.10457 7 8 7C6.89543 7 6 6.10457 6 5V3C6 1.89543 6.89543 1 8 1C9.10457 1 10 1.89543 10 3ZM5 3C5 1.34315 6.34315 0 8 0C9.65685 0 11 1.34315 11 3V5C11 6.65685 9.65685 8 8 8C6.34315 8 5 6.65685 5 5V3ZM4.1305 10.0742C4.26803 10.0181 4.459 10 5.41376 10H10.5862C11.541 10 11.732 10.0181 11.8695 10.0742C12.0299 10.1398 12.1706 10.2459 12.2777 10.3821C12.3695 10.4989 12.4393 10.6776 12.7016 11.5956L13.6743 15H2.32573L3.29841 11.5956C3.5607 10.6776 3.63054 10.4989 3.72233 10.3821C3.82941 10.2459 3.97006 10.1398 4.1305 10.0742ZM13.6631 11.3209L14.7143 15L15 16H13.96H2.04002H1L1.28571 15L2.33689 11.3209C2.57458 10.489 2.69343 10.073 2.93606 9.76423C3.15022 9.49171 3.43152 9.27953 3.75239 9.14848C4.11592 9 4.54854 9 5.41376 9H10.5862C11.4515 9 11.8841 9 12.2476 9.14848C12.5685 9.27953 12.8498 9.49171 13.0639 9.76423C13.3066 10.073 13.4254 10.489 13.6631 11.3209Z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="identifier identifierSpan MuiBox-root emotion-4"
                data-se="identifier"
              >
                tester2@test.com
              </span>
            </div>
          </div>
          <form
            class="o-form"
            data-se="form"
            novalidate=""
          >
            <div
              class="MuiBox-root emotion-6"
            >
              <div
                class="MuiBox-root emotion-6"
              >
                <div
                  class="MuiBox-root emotion-8"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 emotion-10"
                    >
                      More options
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <fieldset
                    class="MuiFormControl-root emotion-12"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-colorPrimary emotion-13"
                    >
                      Which option do you want to try?
                    </label>
                    <div
                      class="MuiFormGroup-root emotion-14"
                      id="generated"
                      role="radiogroup"
                    >
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-15"
                      >
                        <span
                          class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root Mui-checked emotion-16"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-17"
                            name="authenticator.channel"
                            type="radio"
                            value="email"
                          />
                          <span
                            class="emotion-18"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-19"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-20"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-21"
                        >
                          Email me a setup link
                        </span>
                      </label>
                      <label
                        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-15"
                      >
                        <span
                          class="MuiRadio-root MuiRadio-colorPrimary MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root emotion-16"
                        >
                          <input
                            class="PrivateSwitchBase-input emotion-17"
                            name="authenticator.channel"
                            type="radio"
                            value="sms"
                          />
                          <span
                            class="emotion-18"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-19"
                              data-testid="RadioButtonUncheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-27"
                              data-testid="RadioButtonCheckedIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-21"
                        >
                          Text me a setup link
                        </span>
                      </label>
                    </div>
                    
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <button
                    class="MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-30"
                    data-se="#/properties/submit"
                    tabindex="0"
                    type="submit"
                  >
                    Next
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-8"
                >
                  <button
                    class="MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  emotion-32"
                    tabindex="0"
                    type="button"
                  >
                    Try a different way
                  </button>
                </div>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-34"
                  data-se="switchAuthenticator"
                  tabindex="0"
                  type="button"
                >
                  Return to authenticator list
                </button>
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <button
                  class="MuiButton-root MuiButton-floating MuiButton-floatingPrimary MuiButton-sizeMedium MuiButton-floatingSizeMedium MuiButton-disableElevation MuiButtonBase-root  emotion-34"
                  data-se="cancel"
                  tabindex="0"
                  type="button"
                >
                  Back to sign in
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </main>
  </span>
</div>
`;
